# nhs_mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  STYLE.md  config.py  db.py  docker-compose.yml  entrypoint.sh  main.py  mcp_server.py  pyproject.toml  tasks.py
.github/workflows/: deploy.yml
domains/: models.py  router.py  utils.py
domains/dmd/: client.py  config.py  models.py  router.py  service.py
domains/icd/: client.py  config.py  models.py  router.py  service.py
domains/nhs/: config.py  models.py  service.py
domains/nhs/conditions/: router.py
domains/nhs/medicines/: router.py
domains/nhs/symptoms/: router.py
domains/nhs/treatments/: router.py
domains/open_prescribing/: client.py  config.py  models.py  router.py  service.py
scraper/: client.py  index.py  markdown.py  page.py
tests/: conftest.py  test_api.py  test_index.py  test_markdown.py  test_page.py  test_tasks.py
tests/style/: conftest.py  test_architecture.py  test_complexity.py  test_dead_code.py  test_docs.py  test_security.py
